samples/_failures_safe/1761207447_141530_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6087e50.c: In function ‘main’:
./samples/SAFE/__tmp_f6087e50.c:180:12: error: missing terminating " character
  180 |     printf("\nToken positions:\
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f6087e50.c:180:5: error: expected expression at end of input
  180 |     printf("\nToken positions:\
      |     ^~~~~~
./samples/SAFE/__tmp_f6087e50.c:180:5: error: expected declaration or statement at end of input
